# nerfy

./: .gitignore  Cargo.toml
examples/: tiny_nerf.rs
