[package]
name = "nerfy"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.75"
candle-core = { git = "https://github.com/laptou/candle.git", version = "0.3.0", features = ["cuda"] }
candle-nn = { git = "https://github.com/laptou/candle.git", version = "0.3.0" }
softbuffer = "0.3.2"
winit = { version = "0.29.2", features = ["rwh_05"] }
