[package]
name = "nerfy"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
safetensors = "0.4.0"
anyhow = "1.0.75"
# candle-core = { git = "https://github.com/laptou/candle.git", version = "0.3.0", features = ["cuda"] }
# candle-nn = { git = "https://github.com/laptou/candle.git", version = "0.3.0" }
softbuffer = "0.3.2"
tch = "0.14.0"
winit = { version = "0.29.2", features = ["rwh_05"] }
